--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,10 @@ button::-moz-focus-inner {
   border-bottom-width: 0px;
 }
 
+.ErrorText {
+  color: #d2604e;
+}
+
 html, body, #root, .App {
   width: 100%;
   height: 100%;
@@ -29,6 +33,38 @@ html, body, #root, .App {
   height: 100%;
   
 }
+.ModalYoutube {
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: hsla(120,0%,0%,0.53);
+  position: absolute;
+  top:0px;
+  left:0px;
+}
+
+.ModalYoutube .YoutubeFrame {
+  background-color: #3D3D3D;
+  /* HOW CAN WE CUSTOMIZE THIS ? */
+  /* https://stackoverflow.com/questions/52393814/css-100-width-of-youtube-embed-video */
+  /* width: 320px; */
+  /* height: 190px; */
+  /* width: 90%;
+  height: 200px; */
+  padding: 18px;
+  margin-bottom: 15px;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+/* .ModalYoutube .YoutubeFrame iframe {
+  margin: 18px;
+}  */
+
 
 .SearchAddressForm {
   width: 100%;
@@ -151,6 +187,16 @@ html, body, #root, .App {
   height: 35px;
   border-radius: 17px;
   margin-bottom: 20px;
+}
+
+.SearchAddressForm form .ErrorText {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.SearchAddressForm form .ErrorText > div:first-child {
+  font-weight: bold;
 }
 
 
