--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,16 @@ button::-moz-focus-inner {
   color: #d2604e;
 }
 
+.StandardButton {
+  color: white;
+  font-size: 18px;
+  background-color: #0086A6;
+  border: none;
+  /* height: 35px; */
+  border-radius: 17px;
+  /* margin-bottom: 20px; */
+}
+
 html, body, #root, .App {
   width: 100%;
   height: 100%;
@@ -33,6 +43,8 @@ html, body, #root, .App {
   height: 100%;
   
 }
+
+/* _____________________________________________ Youtube */
 .ModalYoutube {
   width: 100%;
   height: 100%;
@@ -65,9 +77,10 @@ html, body, #root, .App {
   margin: 18px;
 }  */
 
+/* ________________________________________________ADDRESS HEADER */
 .AddressHeader {
   position: relative;
-  height: 14%;
+  height: 14vh;
   background-color: #0086A6;
   color: white;
   
@@ -93,6 +106,7 @@ html, body, #root, .App {
 }
 .AddressHeader .SelectedAddress {
   font-size: 24px;
+  text-align: center;
 }
 
 
@@ -151,9 +165,9 @@ html, body, #root, .App {
   margin-bottom: 16px;
 }
 
-.SearchAddressForm form .InputBlock {
-  /* background-color: red; */
-}
+/* .SearchAddressForm form .InputBlock {
+  background-color: red; 
+} */
 
 .SearchAddressForm form .InputBlock .Row {
   display: flex;
@@ -211,14 +225,15 @@ html, body, #root, .App {
 }
 
 .SearchAddressForm form .ButtonSearch {
-  color: white;
+  /* color: white;
   font-size: 18px;
   background-color: #0086A6;
-  border: none;
+  border: none; */
   width:116px;
   height: 35px;
-  border-radius: 17px;
   margin-bottom: 20px;
+  /* border-radius: 17px;
+  margin-bottom: 20px; */
 }
 
 .SearchAddressForm form .ErrorText {
@@ -229,6 +244,31 @@ html, body, #root, .App {
 
 .SearchAddressForm form .ErrorText > div:first-child {
   font-weight: bold;
+}
+/* __________________________________________________________ Search Address From List */
+.SelectAddressFromList {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.SelectAddressFromList legend {
+  color: #707070;
+  font-size: 16px;
+  margin-bottom: 16px;
+  margin-top: 16px;
+}
+
+
+.SelectAddressFromList ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+.SelectAddressFromList button {
+  /* width: 80%; */
+  height: 45px;
+  margin-bottom: 10px;
 }
 
 
