--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,26 @@ html, body, #root, .App {
   
 }
 
+.Body {
+  width: 100%;
+  /* height: 100%; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 16px;
+}
+.BodyHide {
+  display: none;
+}
+
+.Body .Tile {
+  margin-top: 16px;
+  background-color: white;
+  width: 90%;
+  border-radius: 10px;
+  box-shadow: 0px 3px 3px hsla(120,0%,0%,0.16);
+}
+
 /* _____________________________________________ Youtube */
 .ModalYoutube {
   width: 100%;
@@ -283,9 +303,10 @@ html, body, #root, .App {
   padding-left: 0;
 }
 .SelectAddressFromList button {
-  /* width: 80%; */
-  height: 45px;
+  min-height: 45px;
   margin-bottom: 10px;
+  width: 90%;
+
 }
 
 /* ________________________________________________ ANY LABEL */
@@ -330,8 +351,8 @@ html, body, #root, .App {
 
 .NewButton {
   background-color: #0086A6;
-  margin-top: 16px;
-  width: 90%;
+  /* margin-top: 16px; */
+  width: 100%;
   min-height: 50px;
   height: 50px;
 }
