--- a/src/App.css
+++ b/src/App.css
@@ -44,8 +44,10 @@ button::-moz-focus-inner {
 html, body, #root, .App {
   width: 100%;
   height: 100%;
+  min-height: 100%;
   background-color: #EEFAFF;
   font-family: 'Rigid Square', 'Regular', 'Roboto', sans-serif;
+  margin : 0 ;
 }
 
 .App {
@@ -53,6 +55,7 @@ html, body, #root, .App {
   margin-top: 20px; */
   width: 100%;
   height: 100%;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -61,11 +64,13 @@ html, body, #root, .App {
 
 .Body {
   width: 100%;
-  /* height: 100%; */
+  /* height: 100%;
+  min-height: 100%; */
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-bottom: 16px;
+  position: relative;
 }
 .BodyHide {
   display: none;
