--- a/src/SaveModal.css
+++ b/src/SaveModal.css
@@ -1,7 +1,10 @@
 
 .ModalSave {
+  /* width: 100%;
+  height: 100%; */
   width: 100%;
   height: 100%;
+  min-height: 100%;
   z-index: 9999;
   display: flex;
   flex-direction: column;
