--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,13 @@ html, body, #root, .App {
   
 }
 
+.InfoPage {
+  box-sizing: border-box;
+  padding: 16px;
+  color: #707070;
+  font-size: 15px;
+}
+
 .Body {
   width: 100%;
   /* height: 100%;
