--- a/src/App.css
+++ b/src/App.css
@@ -212,6 +212,37 @@ html, body, #root, .App {
   display: none;
 }
 
+.SearchAddressForm .SpinnerContainer {
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: hsla(120,0%,0%,0.53);
+  position: absolute;
+  top:0px;
+  left:0px;
+}
+.SearchAddressForm .SpinnerContainer div {
+  margin-top: 16px;
+  font-size: 18px;
+  color: white;
+}
+.SearchAddressForm .SpinnerContainer.Invisible {
+  visibility: hidden;
+  /* transition back currently does not work because it goes already to other screen. We could add this screen to the root element to solve it */
+  opacity: 0;
+  transition: opacity 1s;
+}
+.SearchAddressForm .SpinnerContainer.Visible {
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 1s;
+}
+
 .SearchAddressForm form {
   display: flex;
   flex-direction: column;
