--- a/src/SaveModal.css
+++ b/src/SaveModal.css
@@ -16,6 +16,37 @@
   left:0px;
 }
 
+.ModalSave .SpinnerContainer {
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: hsla(120,0%,0%,0.53);
+  position: absolute;
+  top:0px;
+  left:0px;
+}
+.ModalSave .SpinnerContainer div {
+  margin-top: 16px;
+  font-size: 18px;
+  color: white;
+}
+.ModalSave .SpinnerContainer.Invisible {
+  visibility: hidden;
+  /* transition back currently does not work because it goes already to other screen. We could add this screen to the root element to solve it */
+  opacity: 0;
+  transition: opacity 1s;
+}
+.ModalSave .SpinnerContainer.Visible {
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 1s;
+}
+
 .ModalSave .Email,
 .ModalSave .Back
  {
