--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,13 @@ button::-moz-focus-inner {
   background-color: white;
   border-bottom-width: 0px;
 } */
+
+@media only screen and (min-width: 1000px) {
+  .Mobile {
+    display: none;
+  }
+}
+
 .TabActive button {
   background-color: white;
   border-bottom-width: 0px;
