--- a/src/App.css
+++ b/src/App.css
@@ -15,8 +15,13 @@ button::-moz-focus-inner {
   border-bottom-width: 0px;
 } */
 
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 600px) {
   .Mobile {
+    display: none;
+  }
+}
+@media only screen and (max-width: 599px) {
+  .Desktop {
     display: none;
   }
 }
