--- a/src/LabelFormTileDesktop.css
+++ b/src/LabelFormTileDesktop.css
@@ -12,3 +12,56 @@
 .Body .Desktop.Tile .TabContainerHorizontal > button > span {
   margin: 4px;
 }
+
+.Body .Desktop.Tile .DesktopLabelformTileBody {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  justify-content: center;
+}
+.Body .Desktop.Tile .DesktopLabelformTileBody .DesktopLabelformTileBodyLeft {
+  max-width: 33%;
+  display: flex;
+  flex-direction: column;
+  align-items: space-between;
+  justify-content: left;
+  padding: 16px;
+  /* border-right-style: solid;
+  border-right-width: 1px;
+  border-right-color: grey; */
+}
+
+.Body .Desktop.Tile .DesktopLabelformTileBody .DesktopLabelformTileBodyLeft+div {
+  height: 100%;
+}
+.Body .Desktop.Tile .DesktopLabelformTileBody .DesktopLabelformTileBodyLeft+div>div {
+  max-width: 2px;
+  max-height: 80%;
+  border-right-style: solid;
+  border-right-width: 1px;
+  border-right-color: #707070;
+  display: block; 
+
+  /* content: "";
+  display: block; 
+    background:red; 
+    min-width:100px;
+    min-height: 100px; */
+}
+
+.Body .Desktop.Tile .DesktopLabelformTileBody .DesktopLabelformTileBodyLeft h1 {
+  color: #707070;
+  font-size: 30px;
+  text-align: left;
+}
+
+.Body .Desktop.Tile .DesktopLabelformTileBody .DesktopLabelformTileBodyLeft p {
+  color: #707070;
+  font-size: 22px;
+  text-align: left;
+}
+
+
+.Body .Desktop.Tile .DesktopLabelformTileBody .DesktopLabelformTileBodyLeft img {
+  width: 240px;
+}
