--- a/src/App.css
+++ b/src/App.css
@@ -24,11 +24,16 @@ button::-moz-focus-inner {
   padding-bottom: 16px;
   position: relative;
 }
-/* @media only screen and (max-width: 799px) { */
-  .Desktop {
-    display: none;
-  }
-/* } */
+.Body .Tile {
+  margin-top: 16px;
+  background-color: white;
+  width: 90%;
+  border-radius: 10px;
+  box-shadow: 0px 3px 3px hsla(120,0%,0%,0.16);
+}
+.Desktop {
+  display: none;
+}
 
 @media only screen and (min-width: 800px) {
   .Mobile {
@@ -42,6 +47,10 @@ button::-moz-focus-inner {
   }
   .Desktop {
     display: initial;
+  }
+  .Body .Tile {
+    /* Somehow the info tiles will align in desktop view when they are 95%. Temporal workaround untill these tiles get desktop layout  */
+    width: 95%;
   }
 }
 
@@ -63,6 +72,12 @@ button::-moz-focus-inner {
   /* height: 35px; */
   border-radius: 17px;
   /* margin-bottom: 20px; */
+  box-shadow: 0px 3px 3px hsla(120,0%,0%,0.16);
+}
+
+.Desktop.StandardButton.NieuwLabelOpslaan {
+  height: 31px;
+  font-size: 14px;
 }
 
 .StandardTile {
@@ -116,13 +131,7 @@ html, body, #root, .App {
   display: none;
 }
 
-.Body .Tile {
-  margin-top: 16px;
-  background-color: white;
-  width: 90%;
-  border-radius: 10px;
-  box-shadow: 0px 3px 3px hsla(120,0%,0%,0.16);
-}
+
 .Body .Tile.Desktop.Currentlabel {
   width: 20%;
 }
@@ -440,12 +449,18 @@ html, body, #root, .App {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+
+  padding-top: 26px;
+  padding-bottom: 26px;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 .AnyLabelVisual .BackgroundImage .Margin {
-  width: 200px;
-  margin-top: 26px;
+  /* width: 200px; */
+
+  /* margin-top: 26px;
   margin-bottom: 26px;
-  margin-left: 40px;
+  margin-left: 40px; */
 }
 
 .AnyLabelVisual .BackgroundImage .Margin img {
