--- a/src/LabelFormTileDesktop.css
+++ b/src/LabelFormTileDesktop.css
@@ -45,19 +45,22 @@
 
 .Body .Desktop.Tile .DesktopLabelformTileBody .DesktopLabelformTileBodyLeft h1 {
   color: #707070;
-  font-size: 30px;
+  font-size: 20px;
   text-align: left;
 }
 
 .Body .Desktop.Tile .DesktopLabelformTileBody .DesktopLabelformTileBodyLeft p {
   color: #707070;
-  font-size: 22px;
+  font-size: 15px;
   text-align: left;
 }
 
 
-.Body .Desktop.Tile .DesktopLabelformTileBody .DesktopLabelformTileBodyLeft img {
-  width: 240px;
+.Body .Desktop.Tile .DesktopLabelformTileBody .DesktopLabelformTileBodyLeft .ImgContainer {
+  max-width: 240px;
+}
+.Body .Desktop.Tile .DesktopLabelformTileBody .DesktopLabelformTileBodyLeft .ImgContainer img {
+  width: 100%;
 }
 
 .Body .Desktop.Tile .TabContainerHorizontal > .TabInActive {
