--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,7 @@ button::-moz-focus-inner {
   border-radius: 17px;
   /* margin-bottom: 20px; */
   box-shadow: 0px 3px 3px hsla(120,0%,0%,0.16);
+  padding: 4px;
 }
 
 .Desktop.StandardButton.NieuwLabelOpslaan {
@@ -464,7 +465,7 @@ html, body, #root, .App {
 }
 
 .AnyLabelVisual .BackgroundImage .Margin img {
-  width: 50%;
+  width: 90%;
   margin-top: 16px;
 }
 
