--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ button::-moz-focus-inner {
 }
 
 .Desktop.StandardButton.NieuwLabelOpslaan {
-  height: 31px;
+  /* height: 31px; */
   font-size: 14px;
 }
 
@@ -361,7 +361,7 @@ html, body, #root, .App {
 .SearchAddressForm form .InputBlock .Row input {
   color: #707070;
   font-size: 19px;
-  border-radius: 3px0;
+  border-radius: 3px;
   border-width: 0;
   height: 31px;
 }
