--- a/src/App.css
+++ b/src/App.css
@@ -29,13 +29,14 @@ button::-moz-focus-inner {
   background-color: white;
   width: 90%;
   border-radius: 10px;
+  overflow: hidden;
   box-shadow: 0px 3px 3px hsla(120,0%,0%,0.16);
 }
 .Desktop {
   display: none;
 }
 
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 900px) {
   .Mobile {
     display: none;
   }
