--- a/src/LabelFormMobile.css
+++ b/src/LabelFormMobile.css
@@ -28,6 +28,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  position: relative;
 }
 
 .LabelFormMobile .RowForButtons .Annuleer {
@@ -40,6 +41,49 @@
   height: 31px;
   font-size: 14px;
 }
+.RowForButtons .Klaar:disabled {
+  background-color: #8A9294;
+  color: #707070;
+  cursor: not-allowed;
+}
+
+.RowForButtons .KlaarButtonContainer {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+}
+
+.RowForButtons .Klaar+span{
+  position: absolute;
+  top: -100px;
+  color: #d2604e;
+  background-color: white;
+  visibility: hidden;
+}
+.RowForButtons .Klaar:disabled:hover+span {
+  visibility: visible;
+}
+/* .Desktop .RowForButtons .Klaar+span {
+  top: 40px;
+}
+.Mobile .RowForButtons .Klaar+span {
+  top: -100px;
+} */
+/* .RowForButtons .Klaar:disabled:hover {
+  background-color: red;
+} */
+/* .RowForButtons .Klaar:disabled:hover::after {
+  content: "Kies eerst het type in het dropdown menu"; 
+  color: #d2604e;
+  position: absolute;
+  top:10px;
+} */
+
+/* does not work */
+/* .RowForButtons .Klaar:disabled:focus {
+  background-color: green;
+} */
+
 .LabelFormMobile ul {
   list-style-type: none;
   padding-left: 0;
