--- a/src/App.css
+++ b/src/App.css
@@ -180,7 +180,45 @@ html, body, #root, .App {
   box-sizing: border-box;
   padding: 16px;
 } */
-
+/* _____________________________________________ BackModal */
+.ModalBack {
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: hsla(120,0%,0%,0.53);
+  position: absolute;
+  top:0px;
+  left:0px;
+}
+.ModalBack .BackConfirm {
+  width: 70%;
+  height: 210px;
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  justify-content: space-around;
+  background-color: white;
+  border-radius: 10px;
+  padding: 20px;
+}
+.ModalBack .BackConfirm h1 {
+  color: #707070;
+  font-size: 18px;
+}
+.ModalBack .BackConfirm p {
+  color: #707070;
+  font-size: 16px;
+}
+.ModalBack .BackConfirm .Row {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 /* _____________________________________________ Youtube */
 .ModalYoutube {
   width: 100%;
