--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,13 @@ button::-moz-focus-inner {
   }
 }
 
+.App button {
+  cursor: pointer;
+}
+.App button:disabled {
+  cursor: not-allowed;
+}
+
 
 .TabActive button {
   background-color: white;
@@ -195,7 +202,7 @@ html, body, #root, .App {
 }
 .ModalBack .BackConfirm {
   width: 70%;
-  height: 210px;
+  /* height: 210px; */
   display: flex;
   flex-direction: column;
   align-items:center;
