--- a/src/App.css
+++ b/src/App.css
@@ -562,6 +562,10 @@ html, body, #root, .App {
   min-height: 50px; 
    height: 50px;
 }
+.Mobile.NewButton:disabled {
+    color: #707070;
+    background-color: #8A9294;
+}
 /* ___________________________________________- InfoTabs */
 
 .InfoTabContainer {
