make buttons bigger for mobile

--- a/src/AssetList.css
+++ b/src/AssetList.css
@@ -15,3 +15,27 @@
 .ColumnAssetStorage > div > span {
   left: -18px;
 }
+
+
+
+.AssetList .Row {
+  margin-top: 16px;
+  display: flex;
+  align-items: center;
+}
+.AssetList .Row input,
+.AssetList .Row select, 
+.AssetList .Row .ColumnAssetType,
+.AssetList .Row .ColumnAssetArea,
+.AssetList .Row .ColumnAssetStorage {
+  height: 40px;
+  box-sizing: border-box;
+  
+}
+.AssetList .Row .ColumnAssetType,
+.AssetList .Row .ColumnAssetArea,
+.AssetList .Row .ColumnAssetStorage {
+  display: flex;
+  align-items: center;
+}
+
