--- a/src/LabelFormTileDesktop.css
+++ b/src/LabelFormTileDesktop.css
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: row;
   align-items: stretch;
-  justify-content: center;
+  justify-content: space-around;
 }
 .Body .Desktop.Tile .DesktopLabelformTileBody .DesktopLabelformTileBodyLeft {
   max-width: 33%;
@@ -26,9 +26,6 @@
   align-items: space-between;
   justify-content: left;
   padding: 16px;
-  /* border-right-style: solid;
-  border-right-width: 1px;
-  border-right-color: grey; */
 }
 
 .Body .Desktop.Tile .DesktopLabelformTileBody .DesktopLabelformTileBodyLeft+div {
@@ -43,7 +40,7 @@
   display: block;
 }
 
-.Body .Desktop.Tile .DesktopLabelformTileBody .DesktopLabelformTileBodyLeft h1 {
+.Body .Desktop.Tile .DesktopLabelformTileBody h1 {
   color: #707070;
   font-size: 20px;
   text-align: left;
@@ -61,6 +58,16 @@
 }
 .Body .Desktop.Tile .DesktopLabelformTileBody .DesktopLabelformTileBodyLeft .ImgContainer img {
   width: 100%;
+}
+
+.Body .Desktop.Tile .DesktopLabelformTileBody .DesktopLabelformTileBodyRight {
+  display: flex;
+  flex-direction: column;
+  align-items: space-between;
+  flex-grow: 1;
+  justify-content: left;
+  padding: 16px;
+  flex-grow: 1;
 }
 
 .Body .Desktop.Tile .TabContainerHorizontal > .TabInActive {
