--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,21 @@ button::-moz-focus-inner {
   display: none;
 }
 
+.Logos {
+  visibility: hidden;
+  /* display: none; */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  background-color: white;
+  margin-top: auto;
+  flex-wrap: wrap;
+}
+.Logos > img {
+  height: 7vh;
+}
+
 @media only screen and (min-width: 900px) {
   .Mobile {
     display: none;
@@ -52,6 +67,9 @@ button::-moz-focus-inner {
   .Body .Tile {
     /* Somehow the info tiles will align in desktop view when they are 95%. Temporal workaround untill these tiles get desktop layout  */
     width: 95%;
+  }
+  .Logos {
+    visibility: visible;
   }
 }
 
@@ -124,7 +142,8 @@ html, body, #root, .App {
   min-height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
+  margin: auto;
   
 }
 
@@ -312,13 +331,20 @@ html, body, #root, .App {
 
 /* _________________________________________________________ Search Address Form */
 
-.SearchAddressForm {
-  width: 100%;
-  height: 100%;
+.SearchAddressFormContainer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  height: 100%;
+}
+
+.SearchAddressForm {
+  width: 100%;
+  /* height: 100%; */
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  /* align-items: center; */
+  margin: auto;
 }
 .HideSearchAddressForm {
   display: none;
@@ -479,15 +505,10 @@ html, body, #root, .App {
 .SearchAddressForm .LinkOldSite {
   color: #707070;
   font-size: 16px;
-  margin-bottom: 4px;
+  /* margin-bottom: 4px; */
   text-decoration: none;
 }
-.SearchAddressForm .Logos {
-  /* display: none; */
-  width: 100%;
-  background-color: white;
-  margin-top: auto;
-}
+
 
 /* __________________________________________________________ Search Address From List */
 .SelectAddressFromList {
