make remove button not jump when switching show-more

--- a/src/LabelFormMobile.css
+++ b/src/LabelFormMobile.css
@@ -110,7 +110,7 @@
 .LabelFormMobile .Row .ColumnAssetTypeSmall {
   flex-basis: 40%;
 }
-.LabelFormMobile .Row .ColumnAssetTypeSmall ~ .ColumnAssetArea,
+/* .LabelFormMobile .Row .ColumnAssetTypeSmall ~ .ColumnAssetArea, */
 .LabelFormMobile .Row .ColumnAssetTypeSmall ~ .ColumnAssetStorage {
   flex-basis: 20%;
 }
