--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,16 @@ button::-moz-focus-inner {
   height: 7vh;
 }
 
+.StandardButton {
+  color: white;
+  font-size: 18px;
+  background-color: #0086A6;
+  border: none;
+  border-radius: 17px;
+  box-shadow: 0px 3px 3px hsla(120,0%,0%,0.16);
+  padding: 8px;
+}
+
 @media only screen and (min-width: 900px) {
   .Mobile {
     display: none;
@@ -71,6 +81,9 @@ button::-moz-focus-inner {
   .Logos {
     visibility: visible;
   }
+  .StandardButton {
+    padding: 12px;
+  }
 }
 
 .App button {
@@ -90,21 +103,10 @@ button::-moz-focus-inner {
   color: #d2604e;
 }
 
-.StandardButton {
-  color: white;
-  font-size: 18px;
-  background-color: #0086A6;
-  border: none;
-  /* height: 35px; */
-  border-radius: 17px;
-  /* margin-bottom: 20px; */
-  box-shadow: 0px 3px 3px hsla(120,0%,0%,0.16);
-  padding: 8px;
-}
-
-.Desktop.StandardButton.NieuwLabelOpslaan {
+/* .Desktop.StandardButton.NieuwLabelOpslaan {
   font-size: 14px;
-}
+} */
+
 .Desktop.StandardButton.NieuwLabelOpslaan+span {
   visibility: hidden;
   color: #d2604e;
@@ -637,6 +639,32 @@ html, body, #root, .App {
 }
 .InfoTabContainer .Info pre {
   white-space: normal;
+}
+
+.Alert.NieuwLabelOpslaan:not([disabled]) {
+  -webkit-animation: OPSLAAN-ANIMATION 1s alternate ease-in-out infinite; /* Safari 4+ */
+  -moz-animation:    OPSLAAN-ANIMATION 1s alternate ease-in-out infinite; /* Fx 5+ */
+  -o-animation:      OPSLAAN-ANIMATION 1s alternate ease-in-out infinite; /* Opera 12+ */
+  animation:         OPSLAAN-ANIMATION 1s alternate ease-in-out infinite; /* IE 10+, Fx 29+ */
+}
+
+@-webkit-keyframes OPSLAAN-ANIMATION {
+  0%   { opacity: 0.4; }
+  100%   { opacity: 1; }
+  /* 50%   { opacity: 1; }
+  100% { opacity: 0.4; } */
+}
+@-moz-keyframes OPSLAAN-ANIMATION {
+  0%   { opacity: 0.4; }
+  100%   { opacity: 1; }
+}
+@-o-keyframes OPSLAAN-ANIMATION {
+  0%   { opacity: 0.4; }
+  100%   { opacity: 1; }
+}
+@keyframes OPSLAAN-ANIMATION {
+  0%   { opacity: 0.4; }
+  100%   { opacity: 1; }
 }
 
 /* .App {
