--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,23 @@ button::-moz-focus-inner {
   align-items: center;
 }
 
+.ModalYoutube .YoutubeFrame {
+  background-color: #3D3D3D;
+  /* HOW CAN WE CUSTOMIZE THIS ? */
+  /* min-width: 40%; */
+  /* max-width: 90%; */
+  width: 80%;
+  min-height: 40%;
+  max-height: 80%;
+
+  padding: 18px;
+  margin-bottom: 15px;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  position: relative;
+}
+
 @media only screen and (min-width: 900px) {
   .Mobile {
     display: none;
@@ -118,6 +135,9 @@ button::-moz-focus-inner {
   .SearchAddressForm form {
     align-items: flex-end;
     padding-right: 5%;
+  }
+  .ModalYoutube .YoutubeFrame {
+    width: 40%;
   }
 }
 
@@ -313,23 +333,14 @@ html, body, #root, .App {
   left:0px;
 }
 
-.ModalYoutube .YoutubeFrame {
-  background-color: #3D3D3D;
-  /* HOW CAN WE CUSTOMIZE THIS ? */
-  /* https://stackoverflow.com/questions/52393814/css-100-width-of-youtube-embed-video */
-  /* width: 320px; */
-  /* height: 190px; */
-  /* width: 90%;
-  height: 200px; */
-  padding: 18px;
-  margin-bottom: 15px;
-  display: flex;
-  justify-content: center;
-  align-content: center;
+
+.ModalYoutube .YoutubeFrame iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
-/* .ModalYoutube .YoutubeFrame iframe {
-  margin: 18px;
-}  */
 
 /* ________________________________________________ADDRESS HEADER */
 .AddressHeader {
