--- a/src/App.css
+++ b/src/App.css
@@ -477,7 +477,7 @@ html, body, #root, .App {
 }
 
 .SearchAddressForm form .InputBlock {
-  min-width: 278px; 
+  min-width: 320px; 
 }
 
 .SearchAddressForm form .InputBlock .Row {
@@ -498,6 +498,7 @@ html, body, #root, .App {
   flex-basis: 100px;
 }
 .SearchAddressForm form .InputBlock .Row .LabelRight {
+  width: 40px;
   margin-left: 10px;
 }
 .SearchAddressForm form .InputBlock .Row input {
@@ -510,20 +511,23 @@ html, body, #root, .App {
 .SearchAddressForm form .InputBlock .Row .LabelLeft + input {
   flex-grow: 0;
   flex-shrink: 0;
-  flex-basis: 100px;
-  max-width: 74px;
+  flex-basis: 94px;
+  max-width: 94px;
 }
 .SearchAddressForm form .InputBlock .Row .LabelRight + input {
   flex-grow: 0;
   flex-shrink: 0;
-  flex-basis: 50px;
-  max-width: 50px;
+  /* how to make dynamic ?? */
+  flex-basis: 72px;
+  max-width: 72px;
 }
 .SearchAddressForm form .InputBlock .Row .LabelLeft + .InputWholeRow {
   /* flex-grow: 0;
   flex-shrink: 0;
   flex-basis: 204px; */
-  max-width: 204px;
+  
+  max-width: 232px;
+  /* max-width: 100%; */
   flex: 1;
   min-width: 0;
 }
