--- a/src/LabelFormTileDesktop.css
+++ b/src/LabelFormTileDesktop.css
@@ -20,7 +20,7 @@
   justify-content: space-around;
 }
 .Body .Desktop.Tile .DesktopLabelformTileBody .DesktopLabelformTileBodyLeft {
-  max-width: 33%;
+  width: 33%;
   display: flex;
   flex-direction: column;
   align-items: space-between;
