--- a/src/MapBuilding.css
+++ b/src/MapBuilding.css
@@ -1,6 +1,8 @@
 .MapContainer {
     /*border: 1px solid red;*/
-    margin: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
     min-height: 256px;
     max-height: 550px;
     /*box-shadow: 0px 3px 3px hsla(120,0%,0%,0.16);*/
