--- a/src/App.css
+++ b/src/App.css
@@ -599,6 +599,7 @@ html, body, #root, .App {
   padding-right: 40px;
   width: 100%;
   box-sizing: border-box;
+  max-height: 80vh;
 }
 .AnyLabelVisual .BackgroundImage {
   position: relative;
@@ -613,6 +614,7 @@ html, body, #root, .App {
 }
 .AnyLabelVisual .BackgroundImage .Margin {
   width: 100%;
+  height: 75vh;
   box-sizing: border-box;
 
 
@@ -633,6 +635,7 @@ html, body, #root, .App {
 }
 .AnyLabelVisual .BackgroundImage .Margin svg {
   width: 90%;
+  max-height: 66%;
   margin-top: 16px;
 }
 
