--- a/src/MapBuilding.css
+++ b/src/MapBuilding.css
@@ -1,17 +1,9 @@
 .MapContainer {
-    /*border: 1px solid red;*/
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 20px;
-    min-height: 256px;
-    max-height: 550px;
-    /*box-shadow: 0px 3px 3px hsla(120,0%,0%,0.16);*/
-    /*visibility: hidden;*/
-    /*float: left;*/
+    margin-top: 30px;
 }
 
 .leaflet-container {
 	width: 100%;
-    min-height: 256px;
-    max-height: 550px;
+    min-height: 150px;
+    max-height: 70vh;
 }
