--- a/src/App.css
+++ b/src/App.css
@@ -616,17 +616,9 @@ html, body, #root, .App {
   width: 100%;
   height: 75vh;
   box-sizing: border-box;
-
-
-  /* width: 200px; */
-
-  /* margin-top: 26px;
-  margin-bottom: 26px;
-  margin-left: 40px; */
-  /* padding-top: 26px;
-  padding-bottom: 26px;
-  padding-left: 40px;
-  padding-right: 40px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .AnyLabelVisual .BackgroundImage .Margin img {
@@ -634,8 +626,9 @@ html, body, #root, .App {
   margin-top: 16px;
 }
 .AnyLabelVisual .BackgroundImage .Margin svg {
+  display: flex;
   width: 90%;
-  max-height: 66%;
+  flex: 1;
   margin-top: 16px;
 }
 
