Show hardcoded building in Veenendaal on map.

--- a/src/App.css
+++ b/src/App.css
@@ -627,7 +627,7 @@ html, body, #root, .App {
 }
 .AnyLabelVisual .BackgroundImage .Margin svg {
   display: flex;
-  width: 90%;
+  /*width: 90%;*/
   flex: 1;
   margin-top: 16px;
 }
