--- a/src/MapBuilding.css
+++ b/src/MapBuilding.css
@@ -8,3 +8,8 @@
 	width: 100%;
     height: 100%;
 }
+/* Since we don't want to pan and zoom for now,
+I also set the cursor to default for the features shown on the map.*/
+.leaflet-interactive {
+  cursor: default;
+}
